# auctionstrategy

./: .gitignore  CMakeLists.txt  README.md
BasicStrategies/: PairingAbstract.h  StrategiesController.cpp  StrategiesController.h  StrategyAbstract.h  generalStates.cpp  generalStates.h
BasicStrategies/BuyerPairing/: AllBuyerPairing.h  BuyerPairingAbstract.h
BasicStrategies/BuyerPairing/include/: PSimple.h
BasicStrategies/BuyerPairing/src/: PSimple.cpp
BasicStrategies/BuyerStrategies/: AllBuyerStrategies.h  BuyerStrategyAbstract.h
BasicStrategies/BuyerStrategies/include/: BCompleteRandom.h  BIncreaseProfit.h  BSimple.h  template.h
BasicStrategies/BuyerStrategies/src/: BCompleteRandom.cpp  BIncreaseProfit.cpp  BSimple.cpp  template.cpp
BasicStrategies/Pairing/: PairingAbstract.h  allPairing.h
BasicStrategies/Pairing/include/: PSimple.h  PSmt.h  template.h
BasicStrategies/Pairing/src/: PSimple.cpp  PSmt.cpp  template.cpp
BasicStrategies/SellerPairing/: AllSellerPairing.h  SellerPairingAbstract.h
BasicStrategies/SellerPairing/include/: PSimple.h
BasicStrategies/SellerPairing/src/: PSimple.cpp
BasicStrategies/SellerStrategies/: AllSellerStrategies.h  SellerStrategyAbstract.h
BasicStrategies/SellerStrategies/include/: SBinarySearch.h  SCompleteRandom.h  template.h
BasicStrategies/SellerStrategies/src/: SBinarySearch.cpp  SCompleteRandom.cpp  template.cpp
GUI/: GUI.jnlp
GUI/src/AuctionStrategyGUI/: Cycle.fxml  CycleController.java  Main.java  Statistic.fxml  StatisticController.java  WelcomeController.java  styles.css
GUI/src/ru/asgui/: Cycle.fxml  CycleController.java  GuiMain.java  Statistic.fxml  StatisticController.java  WelcomeController.java
MainLogic/include/: AuctionGame.h  GeneticCycle.h  PartedGeneticCycle.h  PartedStatisticCollector.h  PlayersHandler.h  Statistic.h  StatisticCollector.h  StatisticCounter.h  StrategiesController.h
MainLogic/src/: AuctionGame.cpp  GeneticCycle.cpp  PartedGeneticCycle.cpp  PartedStatisticCollector.cpp  PlayersHandler.cpp  StatisticCollector.cpp  StatisticCounter.cpp  StrategiesController.cpp  main.cpp
Player/include/: Buyer.h  Player.h  Seller.h
Player/src/: Buyer.cpp  Player.cpp  Seller.cpp
buildTests/: CMakeLists.txt  build.sh
include/: GeneticCycle.h  geneticCycle.h
src/: GeneticCycle.cpp
test/BasicStrategies/: BasicStrategiesManipulator.py  StrategyAbstract.h  generalStates.h
test/BasicStrategies/Pairing/: PairingAbstract.h
test/BasicStrategies/Pairing/src/: PSimple.cpp
test/BasicStrategies/SellerStrategies/: AllSellerStrategies.h
test/BasicStrategies/SellerStrategies/include/: SBinarySearch.h
test/GUI/: GUI.jnlp  gui.properties  gui_Thu_Nov_29_08-08-21_MSK_2018.properties  gui_Thu_Nov_29_08-08-21_MSK_2018.xml  module_gui_Thu_Nov_29_08-08-21_MSK_2018.xml
test/GUI/src/ru/asgui/: Welcome.fxml  WelcomeController.java
test/MainLogic/include/: AuctionGame.h  GeneticCycle.h
test/MainLogic/src/: GeneticCycle.cpp  StrategiesController.cpp
test/Player/: Buyer.h  Player.h
tests/MainLogic/: AuctionGame.cc  GeneticCycle.cc  PartedGeneticCycle.cc  PartedStatisticCollector.cc  PlayersHandler.cc  StatisticCollector.cc
